--- a/src/components/TeamDetails/TeamDetails.css
+++ b/src/components/TeamDetails/TeamDetails.css
@@ -1,15 +1,34 @@
 .top-image{
     background-image: url(../../images/ground.jpg);
-    height: 320px;
+    height: 300px;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.links{
+    text-align: center;
+}
+
+.links img{
+    height:80px;
+}
+
+.top-img img{
+
+    height:100px;
 }
 
 .team-card{
-    border: 0px;
+    border: 2px solid purple; 
     border-radius:20px;
+    padding:20px;
+    background-color: purple;
+    color:white;
 }
 
 .logo{
