--- a/src/components/TeamDetails/TeamDetails.css
+++ b/src/components/TeamDetails/TeamDetails.css
@@ -6,8 +6,15 @@
     background-size: cover;
     text-align: center;
     display: flex;
+    opacity: 0.9;
     justify-content: center;
     align-items: center;
+}
+
+.top-image h1{
+    font-size: 70px;
+    color: #8B0000;
+    font-weight:bold;
 }
 
 .links{
